# ml_course

./: .gitignore  README.md  pyproject.toml
llm/: rag_evaluation.ipynb
llm/rag_evaluation/nbs/: rag_evaluation.ipynb
ml_1/week_10/: BPE_algorithm_analysis.ipynb
ml_1/week_11/: sem09-trees.ipynb
ml_1/week_12/: sem13_rf_task.ipynb
ml_1/week_13/: gradient_boosting_seminar_v2.ipynb
ml_1/week_15/: sem12-clustering.ipynb  sem13-pca-tsne.ipynb
ml_1/week_2/: sem02-charts.ipynb  sem02-sklearn-linreg.ipynb
ml_1/week_3/: sem03-gd.ipynb  vector_diff_gd.pptx
ml_1/week_4/: feature_eng.pptx  sem04-features.ipynb
ml_1/week_5/: gd_modif.pptx
ml_1/week_6/: metrics_classif.pptx
ml_1/week_7/: auc.ipynb  multiclass&calibration.pptx  sem06-calibration.ipynb
